# okarin

./: .dockerignore  .gitignore  Makefile  README.md  compose.local.yml  compose.production.yml  compose.staging.yml  compose.test.yml  compose.yml  lefthook.yml
.github/PULL_REQUEST_TEMPLATE/: pull_REQUEST_TEMPLATE.md
.github/workflows/: assign-author.yml  kaede-ci.yml  kaede-db-ci.yml  kaede-s3-ci.yml  nozomi-ci.yml  okarin-prod-deploy-ci.yml  okarin-stg-deploy-ci.yml  okarin-test-deploy-ci.yml
apps/kaede/: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.mjs  instrument.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  vitest.config.ts  vitest.db.config.ts  vitest.s3.config.js  vitest.s3.config.ts
apps/nozomi/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  server.py
apps/nozomi/.github/workflows/: ci.yml
apps/nozomi/src/: __init__.py  server.py
apps/nozomi/src/analysis/: __init__.py  base.py  default_rikka_strategy.py  factory.py
apps/nozomi/src/routes/: __init__.py  analysis.py  debug.py  health.py
apps/nozomi/src/schemas/: __init__.py  analysis.py  common.py
apps/nozomi/src/usecases/: __init__.py  submit_analysis.py
apps/nozomi/tests/: test_analysis_schema.py  test_default_rikka_strategy.py  test_main.py  test_submit_analysis.py
db/: README.md  schema.sql
db/migrations/: 20260425120000_init.sql  20260501110000_add_deleted_at_to_recordings_and_trajectories.sql  20260531160000_add_display_name_to_pedestrians.sql  20260610050000_add_auth_infrastructure.sql  20260610060000_add_account_lock_fields_to_users.sql  20260610070000_add_organization_id_to_resources.sql  20260610080000_set_resource_organization_id_not_null.sql  20260616090000_add_owner_membership_role.sql  20260616100000_add_oidc_onboarding_schema.sql  20260623010000_add_session_auth_method.sql  20260626010000_add_user_activation_status.sql  20260708010000_add_recording_and_trajectory_constraints.sql
db/seeds/: local_dev.sql
deploy/: env.local.example  env.local.storage-bootstrap  env.production.example  env.staging.example  env.staging.storage-bootstrap.example
deploy/apps/: kaede.local.env.example  kaede.production.env.example  kaede.staging.env.example  kaede.test.env.example  storage-bootstrap.local.env.example  storage-bootstrap.production.env.example  storage-bootstrap.test.env.example
deploy/env/: local.env.example  production.env.example  (+2 more)
docker/: compose.local.yml  compose.production.yml  compose.staging.yml  compose.test.yml  compose.yml
seaweedfs/: s3.conf.example
storage/: README.md  object_schema.md
(+308 files in other folders)
